# main.go
@@ -40,7 +40,8 @@ func main() {
 
 	v1 := r.Group("api/v1")
 	{
-		v1.POST("register", view.Register)
+		v1.POST("register", view.RegisterView)
+		v1.POST("login", view.LoginView)
 	}
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
